--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "illuminate/contracts": "^8.0|^9.0",
-        "illuminate/support": "^8.0|^9.0",
+        "illuminate/contracts": "^8.67|^9.0|^10.0",
+        "illuminate/support": "^8.67|^9.0|^10.0",
         "spatie/laravel-package-tools": "^1.10",
         "symfony/finder": "^5.4.2|^6.0",
         "symfony/polyfill-php80": "^1.26"
